--- a/src/main/webapp/view/bairro-form.xhtml
+++ b/src/main/webapp/view/bairro-form.xhtml
@@ -12,7 +12,7 @@
 
 	<h:form id="frmPesquisa" >
 		<p:panel style="width: 100%;" rendered="#{bairroBean.mostraPesquisa}">
-			<p:outputLabel value="Nome: " for="nomePesquisa" style="width: 200px;" />
+			<p:outputLabel value="Bairro: " for="nomePesquisa" style="width: 200px;" />
 			<p:inputText id="nomePesquisa" value="#{bairroBean.nome}" />
 
 			<p:commandButton value="Pesquisar"
