--- a/src/main/webapp/view/fiscalizacao-form.xhtml
+++ b/src/main/webapp/view/fiscalizacao-form.xhtml
@@ -90,6 +90,17 @@
 				<h:outputText value="#{fiscalizacao.empresa.bairro.cidade.uf.sigla}" />
 			</p:column>
 
+			<p:column headerText="Fiscal 1">
+				<h:outputText value="#{fiscalizacao.fiscal1}" />
+			</p:column>
+
+			<p:column headerText="Fiscal 2">
+				<h:outputText value="#{fiscalizacao.fiscal2}" />
+			</p:column>
+
+			<p:column headerText="Quantidades de Ocorrencias">
+				<h:outputText value="#{fiscalizacao.quantidadeOcorrencias}" />
+			</p:column>
 
 		</p:dataTable>
 
