--- a/src/main/webapp/view/fiscalizacao-form.xhtml
+++ b/src/main/webapp/view/fiscalizacao-form.xhtml
@@ -10,7 +10,9 @@
 
 <h:body>
 
+
 	<h:form id="frmPesquisa" >
+		<p:outputLabel value="Fiscalização" style="font-size: 40pt;" />
 		<p:panel style="width: 100%;" rendered="#{fiscalizacaoBean.mostraPesquisa}">
 			<p:outputLabel value="Nome: " for="nomePesquisa" style="width: 200px;" />
 			<p:inputText id="nomePesquisa" value="#{fiscalizacaoBean.nome}" />
@@ -139,23 +141,19 @@
 
 		<p:spacer />
 
-		<p:panelGrid columns="2" style="width: 100%;">
+		<p:panelGrid columns="3" style="width: 100%;">
 			<p:outputLabel value="Ocorrencia : " style="width: 200px;" />
-			<h:panelGroup>
-				<p:commandButton value="Criar Ocorrencia"
-								 rendered="#{fiscalizacaoBean.mostraEdicao}"
-								 id="btn-incluir-ocorrencia"
-								 style="margin-top: 20px;"
-								 actionListener="#{fiscalizacaoBean.criaOcorrencia()}"
-								 process="@form"
-								 update="ocorrencias"/>
-			</h:panelGroup>
-
-			<p:outputLabel value="Nome: " for="nome" style="width: 200px;" />
-			<p:inputText id="nome" value="#{fiscalizacaoBean.ocorrenciaEdicao.nome}" />
-
-			<p:outputLabel value="Codigo: " for="codigo" style="width: 200px;" />
-			<p:inputText id="codigo" value="#{fiscalizacaoBean.ocorrenciaEdicao.codigo}" />
+			<p:selectOneMenu id="selectOcorrencias" value="#{fiscalizacaoBean.ocorrenciaEdicao}" style="width:225px">
+				<f:selectItem itemLabel="Ocorrencia não selecionado" itemValue="" />
+				<f:selectItems value="#{ocorrenciaBean.ocorrencias}" var="ocorrencia"
+							   itemLabel="#{ocorrencia.ocorrenciaCodigoNome}" itemValue="#{ocorrencia}" />
+			</p:selectOneMenu>
+			<p:commandButton value="Selecionar Ocorrencia"
+							 id="btn-incluir-ocorrencia"
+							 style="margin-top: 20px;"
+							 actionListener="#{fiscalizacaoBean.criaOcorrencia()}"
+							 process="@form"
+							 update="ocorrencias"/>
 		</p:panelGrid>
 
 
