--- a/src/main/webapp/view/bairro-form.xhtml
+++ b/src/main/webapp/view/bairro-form.xhtml
@@ -11,6 +11,7 @@
 <h:body>
 
 	<h:form id="frmPesquisa" >
+		<p:outputLabel value="Bairro" style="font-size: 40pt;" />
 		<p:panel style="width: 100%;" rendered="#{bairroBean.mostraPesquisa}">
 			<p:outputLabel value="Bairro: " for="nomePesquisa" style="width: 200px;" />
 			<p:inputText id="nomePesquisa" value="#{bairroBean.nome}" />
