--- a/src/main/webapp/view/cidade-form.xhtml
+++ b/src/main/webapp/view/cidade-form.xhtml
@@ -11,6 +11,7 @@
 <h:body>
 
 	<h:form id="frmPesquisa" >
+		<p:outputLabel value="Cidade" style="font-size: 40pt;" />
 		<p:panel style="width: 100%;" rendered="#{cidadeBean.mostraPesquisa}">
 			<p:outputLabel value="Cidade: " for="nomePesquisa" style="width: 200px;" />
 			<p:inputText id="nomePesquisa" value="#{cidadeBean.nome}" />
