--- a/src/main/webapp/view/fiscal-form.xhtml
+++ b/src/main/webapp/view/fiscal-form.xhtml
@@ -11,6 +11,7 @@
 <h:body>
 
     <h:form id="frmPesquisa" >
+        <p:outputLabel value="Fiscal" style="font-size: 40pt;" />
         <p:panel style="width: 100%;" rendered="#{fiscalBean.mostraPesquisa}">
             <p:outputLabel value="Nome do Fiscal: " for="nomePesquisa" style="width: 200px;" />
             <p:inputText id="nomePesquisa" value="#{fiscalBean.nome}" />
