--- a/src/main/webapp/view/uf-form.xhtml
+++ b/src/main/webapp/view/uf-form.xhtml
@@ -11,6 +11,7 @@
 <h:body>
 
 	<h:form id="frmPesquisa" >
+		<p:outputLabel value="Uf" style="font-size: 40pt;" />
 		<p:panel style="width: 100%;" rendered="#{ufBean.mostraPesquisa}">
 			<p:outputLabel value="Uf: " for="nomePesquisa" style="width: 200px;" />
 			<p:inputText id="nomePesquisa" value="#{ufBean.nome}" />
