--- a/src/main/webapp/view/empresa-form.xhtml
+++ b/src/main/webapp/view/empresa-form.xhtml
@@ -10,6 +10,12 @@
 
 <h:body>
 
+	<h:form>
+		<p:messages id="messages" showDetail="true" closable="true">
+			<p:autoUpdate />
+		</p:messages>
+	</h:form>
+
 	<h:form id="frmPesquisa" >
 		<p:outputLabel value="Empresa" style="font-size: 40pt;" />
 		<p:panel style="width: 100%;" rendered="#{empresaBean.mostraPesquisa}">
@@ -100,9 +106,6 @@
 
 
 	<h:form id="frmEdicao" >
-		<p:messages id="messages" showDetail="true" closable="true">
-			<p:autoUpdate />
-		</p:messages>
 
 		<p:panelGrid columns="2" style="width: 100%;" rendered="#{empresaBean.mostraEdicao}">
 			<p:outputLabel value="Razao Social: " for="RazaoSocial" style="width: 200px;" />
@@ -118,21 +121,21 @@
 			<p:inputText id="Logadouro" value="#{empresaBean.empresa.logadouro}" />
 
 			<p:outputLabel for="uf" value="Uf:" />
-			<p:selectOneMenu id="uf" value="#{empresaBean.empresa.uf}" style="width:125px">
+			<p:selectOneMenu id="uf" value="#{empresaBean.empresa.uf}" filter="true" filterMatchMode="contains" style="width:125px">
 				<p:ajax listener="#{empresaBean.onUfChange}" update="cidade" />
 				<f:selectItem itemLabel="Selecione Uf" itemValue="" noSelectionOption="true" />
 				<f:selectItems value="#{empresaBean.todosUf}" var="uf" itemLabel="#{uf.nome}" itemValue="#{uf}" />
 			</p:selectOneMenu>
 
 			<p:outputLabel for="cidade" value="Cidade:" />
-			<p:selectOneMenu id="cidade" value="#{empresaBean.empresa.cidade}" style="width:125px">
+			<p:selectOneMenu id="cidade" value="#{empresaBean.empresa.cidade}" filter="true" filterMatchMode="contains" style="width:125px">
 				<p:ajax listener="#{empresaBean.onCidadeChange}" update="bairro" />
 				<f:selectItem itemLabel="Selecione Cidade" itemValue="" noSelectionOption="true" />
 				<f:selectItems value="#{empresaBean.cidades}" var="cidade" itemLabel="#{cidade.nome}" itemValue="#{cidade}" />
 			</p:selectOneMenu>
 
 			<p:outputLabel for="bairro" value="Bairro:" />
-			<p:selectOneMenu id="bairro" value="#{empresaBean.empresa.bairro}" style="width:125px">
+			<p:selectOneMenu id="bairro" value="#{empresaBean.empresa.bairro}" filter="true" filterMatchMode="contains" style="width:125px">
 				<f:selectItem itemLabel="Selecione Cidade" itemValue="" noSelectionOption="true" />
 				<f:selectItems value="#{empresaBean.bairros}" var="bairro" itemLabel="#{bairro.nome}" itemValue="#{bairro}" />
 			</p:selectOneMenu>
