--- a/src/main/webapp/view/bairro-form.xhtml
+++ b/src/main/webapp/view/bairro-form.xhtml
@@ -10,6 +10,12 @@
 
 <h:body>
 
+	<h:form>
+		<p:messages id="messages" showDetail="true" closable="true">
+			<p:autoUpdate />
+		</p:messages>
+	</h:form>
+
 	<h:form id="frmPesquisa" >
 		<p:outputLabel value="Bairro" style="font-size: 40pt;" />
 		<p:panel style="width: 100%;" rendered="#{bairroBean.mostraPesquisa}">
@@ -90,14 +96,14 @@
 	<h:form id="frmEdicao" >
 		<p:panelGrid columns="2" style="width: 100%;" rendered="#{bairroBean.mostraEdicao}">
 			<p:outputLabel for="uf" value="UF:" />
-			<p:selectOneMenu id="uf" value="#{bairroBean.bairro.uf}" style="width:125px">
+			<p:selectOneMenu id="uf" value="#{bairroBean.bairro.uf}" filter="true" filterMatchMode="contains" style="width:125px">
 				<p:ajax listener="#{bairroBean.onUfChange}" update="cidade" />
 				<f:selectItem itemLabel="Selecione Uf" itemValue="" noSelectionOption="true" />
 				<f:selectItems value="#{bairroBean.todosUf}" var="uf" itemLabel="#{uf.nome}" itemValue="#{uf}" />
 			</p:selectOneMenu>
 
 			<p:outputLabel for="cidade" value="Cidade:" />
-			<p:selectOneMenu id="cidade" value="#{bairroBean.bairro.cidade}" style="width:125px">
+			<p:selectOneMenu id="cidade" value="#{bairroBean.bairro.cidade}" filter="true" filterMatchMode="contains" style="width:125px">
 				<f:selectItem itemLabel="Selecione Cidade" itemValue="" noSelectionOption="true" />
 				<f:selectItems value="#{bairroBean.cidades}" var="cidade" itemLabel="#{cidade.nome}" itemValue="#{cidade}" />
 			</p:selectOneMenu>
