--- a/src/main/webapp/view/cidade-form.xhtml
+++ b/src/main/webapp/view/cidade-form.xhtml
@@ -10,6 +10,12 @@
 
 <h:body>
 
+	<h:form>
+		<p:messages id="messages" showDetail="true" closable="true">
+			<p:autoUpdate />
+		</p:messages>
+	</h:form>
+
 	<h:form id="frmPesquisa" >
 		<p:outputLabel value="Cidade" style="font-size: 40pt;" />
 		<p:panel style="width: 100%;" rendered="#{cidadeBean.mostraPesquisa}">
@@ -85,7 +91,7 @@
 	<h:form id="frmEdicao" >
 		<p:panelGrid columns="2" style="width: 100%;" rendered="#{cidadeBean.mostraEdicao}">
 			<p:outputLabel for="uf" value="UF:" />
-			<p:selectOneMenu id="uf" value="#{cidadeBean.cidade.uf}" style="width:125px">
+			<p:selectOneMenu id="uf" value="#{cidadeBean.cidade.uf}" filter="true" filterMatchMode="contains" style="width:125px">
 				<f:selectItems value="#{ufBean.todos}" var="uf" itemLabel="#{uf.sigla}" itemValue="#{uf}" />
 			</p:selectOneMenu>
 
