--- a/src/main/webapp/view/fiscalizacao-form.xhtml
+++ b/src/main/webapp/view/fiscalizacao-form.xhtml
@@ -10,6 +10,11 @@
 
 <h:body>
 
+	<h:form>
+		<p:messages id="messages" showDetail="true" closable="true">
+			<p:autoUpdate />
+		</p:messages>
+	</h:form>
 
 	<h:form id="frmPesquisa" >
 		<p:outputLabel value="Fiscalização" style="font-size: 40pt;" />
@@ -122,18 +127,19 @@
 			<p:calendar id="Data" pattern="dd/MM/yyyy" mask="true" converter="localDateConverter" value="#{fiscalizacaoBean.fiscalizacao.data}" />
 
 			<p:outputLabel for="Empresa" value="Empresa:" />
-			<p:selectOneMenu id="Empresa" value="#{fiscalizacaoBean.fiscalizacao.empresa}" style="width:225px">
+			<p:selectOneMenu id="Empresa" value="#{fiscalizacaoBean.fiscalizacao.empresa}" filter="true" filterMatchMode="contains" style="width:225px">
+				<f:selectItem itemLabel="Empresa não selecionado" itemValue="" />
 				<f:selectItems value="#{empresaBean.todos}" var="empresa" itemLabel="#{empresa.razaoSocial}" itemValue="#{empresa}" />
 			</p:selectOneMenu>
 
 			<p:outputLabel for="Fiscal1" value="Fiscal 1:" />
-			<p:selectOneMenu id="Fiscal1" value="#{fiscalizacaoBean.fiscalizacao.fiscal1}" style="width:225px">
+			<p:selectOneMenu id="Fiscal1" value="#{fiscalizacaoBean.fiscalizacao.fiscal1}" filter="true" filterMatchMode="contains" style="width:225px">
 				<f:selectItem itemLabel="Fiscal não selecionado" itemValue="" />
 				<f:selectItems value="#{fiscalBean.todos}" var="fiscal1" itemLabel="#{fiscal1.nome}" itemValue="#{fiscal1}" />
 			</p:selectOneMenu>
 
 			<p:outputLabel for="Fiscal2" value="Fiscal 2:" />
-			<p:selectOneMenu id="Fiscal2" value="#{fiscalizacaoBean.fiscalizacao.fiscal2}" style="width:225px">
+			<p:selectOneMenu id="Fiscal2" value="#{fiscalizacaoBean.fiscalizacao.fiscal2}" filter="true" filterMatchMode="contains" style="width:225px">
 				<f:selectItem itemLabel="Fiscal não selecionado" itemValue="" />
 				<f:selectItems value="#{fiscalBean.todos}" var="fiscal2" itemLabel="#{fiscal2.nome}" itemValue="#{fiscal2}" />
 			</p:selectOneMenu>
@@ -143,7 +149,7 @@
 
 		<p:panelGrid columns="3" style="width: 100%;">
 			<p:outputLabel value="Ocorrencia : " style="width: 200px;" />
-			<p:selectOneMenu id="selectOcorrencias" value="#{fiscalizacaoBean.ocorrenciaEdicao}" style="width:225px">
+			<p:selectOneMenu id="selectOcorrencias" value="#{fiscalizacaoBean.ocorrenciaEdicao}" filter="true" filterMatchMode="contains" style="width:225px">
 				<f:selectItem itemLabel="Ocorrencia não selecionado" itemValue="" />
 				<f:selectItems value="#{ocorrenciaBean.ocorrencias}" var="ocorrencia"
 							   itemLabel="#{ocorrencia.ocorrenciaCodigoNome}" itemValue="#{ocorrencia}" />
